--- a/layout/contact.html
+++ b/layout/contact.html
@@ -1,32 +1,127 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/app.css">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <!-- 
+        Memberikan instruksi ke browser untuk mengontrol dimesi dari halaman dan skalanya 
+        width=device-width digunakan untuk mensets lebar dari halaman untuk mengikuti lebar screen dari device
+        initial-scale=1.0 digunakan untuk set initial zoom ketika halaman di muat pertama kali oleh browser.
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- 
+        Menghubungkan eksternal resource dari bootstrap ke dokumen ini.
+     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--
+        Menghubungkan file css dengan nama style.css yang terdapat pada folder css
+    -->
+    <link rel="stylesheet" href="/css/style.css">
+    <title>My Portfolio</title>
 </head>
 
 <body>
-    <script src="/js/app.js"></script>
-    <div class="topnav">
-        <a href="/index.html">Home</a>
-        <a class="active" href="layout/contact.html">Contact Me</a>
-    </div>
 
-    <div class="container">
-        <form action="#" onsubmit="validateForm(this)">
+    <!-- Navigasi -->
+    <!-- Membuat navigasi bar -->
+    <nav>
+        <!-- Membuat anchor element yang ketika di klik akan redirect ke laman index.html => namaweb/index.html -->
+        <a href="/layout/contact.html">Home</a> |
 
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" placeholder="Email anda..">
+        <!-- Membuat anchor element, href disini diberi nilai # agar ketika berada di current page browser tidak menload ulang file html. -->
+        <a href="#">Contact Me</a> |
+    </nav>
+    <!-- Akhir navigasi -->
 
-            <label for="message">Pesan</label>
-            <textarea id="message" name="message" placeholder="Tuliskan pesan anda disini.." style="height:200px"></textarea>
+    <!-- Contact -->
+    <section class="contact" id="contact">
+        <!--
+        Class container berfungsi untuk membungkus kontent web. container juga 
+        merupakan syarat untuk menggunakan default grid system yang disediakan oleh bootstrap.
+    -->
+        <div class="container py-5">
+            <!--
+            Membuat baris, sehingga item-item yang terdapat didalam elemen ini akan tampil
+            dalam bentuk baris.
+        -->
+            <div class="row">
+                <!--
+                Membuat kolom, dimana sm-12 digunakan untuk mengatur grid pada monitor yang
+                berukuran tablet agar menggunakan sebanyak 12 grid (full). kemudian ada
+                text-center yang digunakan untuk menengahkan text serta image 
+                yang terdapat didalam element ini.
+            -->
+                <div class="col-sm-12 text-center">
+                    <h2>Contact</h2>
+                    <hr>
+                </div>
+            </div>
+            <!--
+            Membuat baris dengan padding y axis yang diberikan adalah 5, d-flex digunakan untuk
+            membt flexbox container dan mengubah children element kedalam flex items, justify-content-center
+            digunakan untuk membuat content untuk berada di tengah, align-items-center digunakan untuk memspesifiasi
+            aligment untuk items yang terdapat didalam flex container.
+        -->
+            <div class="row py-5 d-flex justify-content-center align-items-center container ">
+                <!--
+                Membuat kolom, dimana sm-6 digunakan untuk mengatur grid pada monitor yang
+                berukuran tablet agar menggunakan sebanyak 6 grid (hald). kemudian ada
+                col-sm-offset-6 yang digunakan jika screen size tablet maka content akan ditempatkan
+                di tengah layar.
+            -->
+                <div class="col-sm-6 col-sm-offset-6">
+                    <!--
+                    Membuat form
+                -->
+                    <form action="">
+                        <!--
+                        Menambahkan style form yang terdapat pada bootstrapcss dengan nama class form-group
+                    -->
+                        <div class="form-group">
+                            <!--
+                            Label dari form
+                        -->
+                            <label for="email">Email</label>
+                            <!--
 
-            <input type="submit" value="Kirim">
-        </form>
-    </div>
+                            Membuat sebuah inputan dengan nama dan id email, kemudian type emal digunakan menspesifikasi
+                            bahwa tipe input yang dimasukkan berupa email format.
+
+                            Class form-control digunakan untuk memberikan style kedalam input, seperti tampilan,
+                            focus state, sizing dan banyak lagi.
+                        -->
+                            <input type="email" name="email" class="form-control" id="email"
+                                placeholder="Enter your email here...">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <!--
+
+                            Membuat sebuah text area, rows digunakan untuk menspesifikasi tinggi dan lebar dari text area
+                            dengan nilai 8 / 8 baris.
+
+                            Class form-control digunakan untuk memberikan style kedalam text area, seperti tampilan,
+                            focus state, sizing dan banyak lagi.
+                        -->
+                            <textarea class="form-control" rows="8" placeholder="Write your message here..."></textarea>
+                        </div>
+
+                        <!--
+                        Membuat button dengan type submit. maka ketika button ini ditekan, form akan menjalankan fungsi
+                        yang telah didefinisikan didalam attribute, misalnya action, onsubmitted, dan lain sebagainy
+
+                        Class btn digunakan untuk memberikan style yang terdapat pada bootstrap css, btn-primary akan digunakan
+                        untuk memberikan warna button menjadi biru.
+                    -->
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Contact -->
 </body>
 </html>
