--- a/layout/contact.html
+++ b/layout/contact.html
@@ -29,7 +29,7 @@
     <!-- Membuat navigasi bar -->
     <nav>
         <!-- Membuat anchor element yang ketika di klik akan redirect ke laman index.html => namaweb/index.html -->
-        <a href="/layout/contact.html">Home</a> |
+        <a href="/index.html">Home</a> |
 
         <!-- Membuat anchor element, href disini diberi nilai # agar ketika berada di current page browser tidak menload ulang file html. -->
         <a href="#">Contact Me</a> |
