--- a/layout/contact.html
+++ b/layout/contact.html
@@ -1,30 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <!-- 
         Memberikan instruksi ke browser untuk mengontrol dimesi dari halaman dan skalanya 
         width=device-width digunakan untuk mensets lebar dari halaman untuk mengikuti lebar screen dari device
         initial-scale=1.0 digunakan untuk set initial zoom ketika halaman di muat pertama kali oleh browser.
     -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- 
         Menghubungkan eksternal resource dari bootstrap ke dokumen ini.
      -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!--
         Menghubungkan file css dengan nama style.css yang terdapat pada folder css
     -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>My Portfolio</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Navigasi -->
     <!-- 
         Membuat navigasi bar
@@ -33,93 +35,111 @@
         navbar-expand-lg digunakan untuk memanjangkan navigasi bar jika screen size = dekstop,
         navbar-dark bg-dark digunakan untuk memberi warna background hitam pada navigasi bar
      -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!--
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <!--
             Membuat anchor element dengan class navbar-brand
         -->
-        <a class="navbar-brand" href="#">Triwibowo Ridho</a>
-        <!--
+      <a class="navbar-brand" href="/index.html">Triwibowo Ridho</a>
+      <!--
             Membuat button yang jika diklik menu dari navigation akan collapse
 
             Class navbar-toggler digunakan untuk menggunakan collapse plugin dan navigation toggling yang disediakan oleh bootstrap
             data-toggle digunakan untuk menghide atau menshow content ketika button di toggle dengan target content yang akan dihide
             berada pada element dengan id navbarSupportedContent.
         -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!--
+      <!--
             Membuat navbar item
         -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!--
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!--
                 Class navbar-nav class digunakan untuk menerapkan style yang full-height dan lightweight navgation,
                 kemudian mr-auto digunakan untuk menset margin secara otomatis.
             -->
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/layout/contact.html">Contact Me</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/layout/contact.html">Contact Me</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <!-- Akhir navigasi -->
 
     <!-- Contact -->
     <section class="contact" id="contact">
-        <!--
+      <!--
         Class container berfungsi untuk membungkus kontent web. container juga 
         merupakan syarat untuk menggunakan default grid system yang disediakan oleh bootstrap.
     -->
-        <div class="container py-5">
-            <!--
+      <div class="container py-5">
+        <!--
             Membuat baris, sehingga item-item yang terdapat didalam elemen ini akan tampil
             dalam bentuk baris.
         -->
-            <div class="row">
-                <!--
+        <div class="row">
+          <!--
                 Membuat kolom, dimana sm-12 digunakan untuk mengatur grid pada monitor yang
                 berukuran tablet agar menggunakan sebanyak 12 grid (full). kemudian ada
                 text-center yang digunakan untuk menengahkan text serta image 
                 yang terdapat didalam element ini.
             -->
-                <div class="col-sm-12 text-center">
-                    <h2>Contact</h2>
-                    <hr>
-                </div>
-            </div>
-            <!--
+          <div class="col-sm-12 text-center">
+            <h2>Contact</h2>
+            <hr />
+          </div>
+        </div>
+        <!--
             Membuat baris dengan padding y axis yang diberikan adalah 5, d-flex digunakan untuk
             membt flexbox container dan mengubah children element kedalam flex items, justify-content-center
             digunakan untuk membuat content untuk berada di tengah, align-items-center digunakan untuk memspesifiasi
             aligment untuk items yang terdapat didalam flex container.
         -->
-            <div class="row py-5 d-flex justify-content-center align-items-center container ">
-                <!--
+        <div
+          class="
+            row
+            py-5
+            d-flex
+            justify-content-center
+            align-items-center
+            container
+          "
+        >
+          <!--
                 Membuat kolom, dimana sm-6 digunakan untuk mengatur grid pada monitor yang
                 berukuran tablet agar menggunakan sebanyak 6 grid (hald). kemudian ada
                 col-sm-offset-6 yang digunakan jika screen size tablet maka content akan ditempatkan
                 di tengah layar.
             -->
-                <div class="col-sm-6 col-sm-offset-6">
-                    <!--
+          <div class="col-sm-6 col-sm-offset-6">
+            <!--
                     Membuat form
                 -->
-                    <form action="">
-                        <!--
+            <form action="">
+              <!--
                         Menambahkan style form yang terdapat pada bootstrapcss dengan nama class form-group
                     -->
-                        <div class="form-group">
-                            <!--
+              <div class="form-group">
+                <!--
                             Label dari form
                         -->
-                            <label for="email">Email</label>
-                            <!--
+                <label for="email">Email</label>
+                <!--
 
                             Membuat sebuah inputan dengan nama dan id email, kemudian type emal digunakan menspesifikasi
                             bahwa tipe input yang dimasukkan berupa email format.
@@ -127,12 +147,17 @@
                             Class form-control digunakan untuk memberikan style kedalam input, seperti tampilan,
                             focus state, sizing dan banyak lagi.
                         -->
-                            <input type="email" name="email" class="form-control" id="email"
-                                placeholder="Enter your email here...">
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <!--
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Enter your email here..."
+                />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <!--
 
                             Membuat sebuah text area, rows digunakan untuk menspesifikasi tinggi dan lebar dari text area
                             dengan nilai 8 / 8 baris.
@@ -140,22 +165,26 @@
                             Class form-control digunakan untuk memberikan style kedalam text area, seperti tampilan,
                             focus state, sizing dan banyak lagi.
                         -->
-                            <textarea class="form-control" rows="8" placeholder="Write your message here..."></textarea>
-                        </div>
+                <textarea
+                  class="form-control"
+                  rows="8"
+                  placeholder="Write your message here..."
+                ></textarea>
+              </div>
 
-                        <!--
+              <!--
                         Membuat button dengan type submit. maka ketika button ini ditekan, form akan menjalankan fungsi
                         yang telah didefinisikan didalam attribute, misalnya action, onsubmitted, dan lain sebagainy
 
                         Class btn digunakan untuk memberikan style yang terdapat pada bootstrap css, btn-primary akan digunakan
                         untuk memberikan warna button menjadi biru.
                     -->
-                        <button type="submit" class="btn btn-primary">Send</button>
-                    </form>
-                </div>
-            </div>
+              <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+          </div>
         </div>
+      </div>
     </section>
     <!-- Akhir Contact -->
-</body>
+  </body>
 </html>
